--- a/animeboydownloader/index.html
+++ b/animeboydownloader/index.html
@@ -67,8 +67,9 @@
   <div id="content"></div>
 
   <script>
-    const apiUrl = "https://api.codetabs.com/v1/proxy?quest=https://api.nekosapi.com/v4/images/random?limit=1&tags=boy&rating=safe,suggestive&without_tags=girl,pussy,exposed_girl_breasts";
-
+    const targetUrl = "https://api.nekosapi.com/v4/images/random?limit=1&tags=boy&rating=safe,suggestive&without_tags=girl,pussy,exposed_girl_breasts";
+    const apiUrl = "https://api.codetabs.com/v1/proxy?quest=" + encodeURIComponent(targetUrl);
+    
     async function loadImage() {
       try {
         const response = await fetch(apiUrl);
