--- a/turtle/index.html
+++ b/turtle/index.html
@@ -159,123 +159,10 @@
     }
 
     /* --- LILYPAD --- */
-    .lilypad {
-      position: absolute;
-      z-index: 4;
-      transform: translate(-50%, -50%);
-      pointer-events: none;
-      cursor: pointer;
-    }
-    .lilypad-inner {
-      position: relative;
-      background-color: #478740;
-      border: 15px solid #366631;
-      border-radius: 50%;
-      overflow: hidden;
-      width: 100%;
-      height: 100%;
-    }
-    .lilypad .cut {
-      position: absolute;
-      border-top: 105px solid transparent;
-      border-left: 300px solid #0e4772;
-      border-bottom: 40px solid transparent;
-      top: 30%;
-      left: -10%;
-      transform: rotate(5deg);
-    }
-    .lilypad .flower {
-      position: absolute;
-      height: 150px;
-      width: 150px;
-      left: 55%;
-      top: 5%;
-    }
-    .lilypad .flower .outermost1 {
-      position: absolute;
-      height: 175px;
-      width: 50px;
-      background-color: #fff8b7;
-      border-radius: 50%;
-      left: 33%;
-      top: -10%;
-    }
-    .lilypad .flower .outermost2 {
-      position: absolute;
-      height: 50px;
-      width: 175px;
-      background-color: #fff8b7;
-      border-radius: 50%;
-      left: -8%;
-      top: 30%;
-    }
-    .lilypad .flower .outer1 {
-      position: absolute;
-      height: 150px;
-      width: 25px;
-      background-color: #fffad1;
-      border-radius: 50%;
-      transform: rotate(45deg);
-      left: 40%;
-      top: -5%;
-    }
-    .lilypad .flower .outer2 {
-      position: absolute;
-      height: 25px;
-      width: 150px;
-      background-color: #fffad1;
-      transform: rotate(45deg);
-      border-radius: 50%;
-      left: -3%;
-      top: 35%;
-    }
-    .lilypad .flower .inner1 {
-      position: absolute;
-      height: 125px;
-      width: 10px;
-      background-color: #fffbe2;
-      border-radius: 50%;
-      left: 46%;
-      top: 5%;
-    }
-    .lilypad .flower .inner2 {
-      position: absolute;
-      height: 10px;
-      width: 125px;
-      background-color: #fffbe2;
-      border-radius: 50%;
-      left: 8%;
-      top: 43%;
-    }
-    .lilypad .flower .innermost1 {
-      position: absolute;
-      height: 100px;
-      width: 5px;
-      background-color: #fffdf4;
-      transform: rotate(45deg);
-      border-radius: 50%;
-      left: 45%;
-      top: 13%;
-    }
-    .lilypad .flower .innermost2 {
-      position: absolute;
-      height: 5px;
-      width: 100px;
-      background-color: #fffdf4;
-      transform: rotate(45deg);
-      border-radius: 50%;
-      left: 14%;
-      top: 42%;
-    }
-    .lilypad .flower .center {
-      position: absolute;
-      height: 50px;
-      width: 50px;
-      background-color: #edcb31;
-      border-radius: 40%;
-      transform: rotate(45deg);
-      top: 30%;
-      left: 33%;
+    .lilypad-canvas {
+      pointer-events: auto;
+      z-index:9;
+      transition: transform 0.1s;
     }
 
     /* --- SPECIAL EFFECTS --- */
@@ -509,6 +396,7 @@
     Right-click to add obstacles.<br>
     Drag shells to move turtles.<br>
     Click names to rename.<br>
+    (H) to hide menu<br>
     Paint walls when "Edit" is checked.
   </small>
 </div>
@@ -1126,96 +1014,199 @@
 
   class Lilypad {
     constructor(x, y, size = 1) {
+    // const existingPad = lilyPads.find(pad =>
+    //     Math.abs(pad.x - x) < 1 && Math.abs(pad.y - y) < 1
+    //   );
+    //
+    //   if (existingPad) {
+    //     console.warn("Cannot place lily pad - another pad already exists at these coordinates");
+    //     return null; // Return null to indicate failure
+    //   }
       this.x = x;
       this.y = y;
+
       this.size = size;
       this.radius = 50 * size;
       this.turtlesOnPad = [];
+      this.flowerColor = this.getRandomFlowerColor();
 
-      this.el = document.createElement('div');
-      this.el.className = 'lilypad';
-      this.el.style.left = x + 'px';
-      this.el.style.top = y + 'px';
-      this.el.style.width = this.radius * 2 + 'px';
-      this.el.style.height = this.radius * 2 + 'px';
+      // Create canvas element
+      this.canvas = document.createElement('canvas');
+      this.canvas.width = this.radius * 2;
+      this.canvas.height = this.radius * 2;
+      this.canvas.style.position = 'absolute';
+      this.canvas.style.left = (x - this.radius) + 'px';
+      this.canvas.style.top = (y - this.radius) + 'px';
+      this.canvas.style.cursor = 'pointer';
+      this.canvas.className = 'lilypad-canvas';
 
-      const inner = document.createElement('div');
-      inner.className = 'lilypad-inner';
-      inner.style.width = this.radius * 2 + 'px';
-      inner.style.height = this.radius * 2 + 'px';
+      // Draw the lily pad
+      this.draw();
 
-      const cut = document.createElement('div');
-      cut.className = 'cut';
-      cut.style.borderLeftWidth = this.radius * 0.6 + 'px';
-
-      const flower = document.createElement('div');
-      flower.className = 'flower';
-      flower.style.width = this.radius * 0.3 + 'px';
-      flower.style.height = this.radius * 0.3 + 'px';
-
-      const outer1 = document.createElement('div');
-      outer1.className = 'outermost1';
-      outer1.style.height = this.radius * 0.35 + 'px';
-      outer1.style.width = this.radius * 0.1 + 'px';
-
-      const outer2 = document.createElement('div');
-      outer2.className = 'outermost2';
-      outer2.style.height = this.radius * 0.1 + 'px';
-      outer2.style.width = this.radius * 0.35 + 'px';
-
-      const inner1 = document.createElement('div');
-      inner1.className = 'outer1';
-      inner1.style.height = this.radius * 0.3 + 'px';
-      inner1.style.width = this.radius * 0.05 + 'px';
-
-      const inner2 = document.createElement('div');
-      inner2.className = 'outer2';
-      inner2.style.height = this.radius * 0.05 + 'px';
-      inner2.style.width = this.radius * 0.3 + 'px';
-
-      const innermost1 = document.createElement('div');
-      innermost1.className = 'innermost1';
-      innermost1.style.height = this.radius * 0.2 + 'px';
-      innermost1.style.width = this.radius * 0.01 + 'px';
-
-      const innermost2 = document.createElement('div');
-      innermost2.className = 'innermost2';
-      innermost2.style.height = this.radius * 0.01 + 'px';
-      innermost2.style.width = this.radius * 0.2 + 'px';
-
-      const center = document.createElement('div');
-      center.className = 'center';
-      center.style.width = this.radius * 0.1 + 'px';
-      center.style.height = this.radius * 0.1 + 'px';
-
-      flower.appendChild(outer1);
-      flower.appendChild(outer2);
-      flower.appendChild(inner1);
-      flower.appendChild(inner2);
-      flower.appendChild(innermost1);
-      flower.appendChild(innermost2);
-      flower.appendChild(center);
-
-      inner.appendChild(cut);
-      inner.appendChild(flower);
-      this.el.appendChild(inner);
-
-      // Add click event for removal
-      this.el.addEventListener('click', (e) => {
+      // Add click event
+      this.canvas.addEventListener('click', (e) => {
         e.stopPropagation();
-        if(removingLilypad) {
+        if (removingLilypad) {
           this.remove();
           showNotification("Lily pad removed");
           removingLilypad = false;
         }
       });
 
-      document.body.appendChild(this.el);
+      document.body.appendChild(this.canvas);
       lilyPads.push(this);
     }
 
+    getRandomFlowerColor() {
+      const colors = [
+        '#FFFF00', // Yellow
+        '#FFD700', // Gold
+        '#FFA500', // Orange
+        '#FF6347', // Tomato
+        '#FF4500', // OrangeRed
+        '#FF0000'  // Red
+      ];
+      return colors[Math.floor(Math.random() * colors.length)];
+    }
+
+    draw() {
+      const ctx = this.canvas.getContext('2d');
+      const centerX = this.radius;
+      const centerY = this.radius;
+
+      // Clear canvas
+      ctx.clearRect(0, 0, this.canvas.width, this.canvas.height);
+
+      // Draw lily pad base (with transparency)
+      ctx.fillStyle = 'rgba(34, 139, 34,1)'; // Forest green
+      ctx.beginPath();
+      ctx.arc(centerX, centerY, this.radius, 0, Math.PI * 2);
+      ctx.fill();
+
+      // Add some texture/variegation
+      this.addTexture(ctx, centerX, centerY);
+
+      // Draw random cutout
+      this.drawCutout(ctx, centerX, centerY);
+
+      // Draw creases
+      this.drawCreases(ctx, centerX, centerY);
+
+      // Draw flower (with random chance)
+      if (Math.random() > 0.3) { // 70% chance of having a flower
+        this.drawFlower(ctx, centerX, centerY);
+      }
+    }
+
+    addTexture(ctx, centerX, centerY) {
+      // Add some lighter/darker spots for realism
+      for (let i = 0; i < 10; i++) {
+        const angle = Math.random() * Math.PI * 2;
+        const distance = Math.random() * this.radius * 0.8;
+        const x = centerX + Math.cos(angle) * distance;
+        const y = centerY + Math.sin(angle) * distance;
+        const size = Math.random() * 10 + 5;
+
+        ctx.fillStyle = `rgba(${Math.floor(Math.random() * 50) + 20},
+                              ${Math.floor(Math.random() * 50) + 100},
+                              ${Math.floor(Math.random() * 20) + 20},
+                              0.3)`;
+        ctx.beginPath();
+        ctx.arc(x, y, size, 0, Math.PI * 2);
+        ctx.fill();
+      }
+    }
+
+    drawCutout(ctx, centerX, centerY) {
+      // Random cutout shape
+      const cutoutSize = this.radius * (0.3 + Math.random() * 0.3);
+      const cutoutAngle = Math.random() * Math.PI * 2;
+      const cutoutX = centerX + Math.cos(cutoutAngle) * (this.radius * 0.6);
+      const cutoutY = centerY + Math.sin(cutoutAngle) * (this.radius * 0.6);
+
+      // Draw the cutout (using composite operation)
+      ctx.globalCompositeOperation = 'destination-out';
+      ctx.beginPath();
+      ctx.arc(cutoutX, cutoutY, cutoutSize, 0, Math.PI * 2);
+      ctx.fill();
+      ctx.globalCompositeOperation = 'source-over';
+    }
+
+    drawCreases(ctx, centerX, centerY) {
+      // Draw 3-5 main creases from center to edge
+      const creaseCount = 3 + Math.floor(Math.random() * 3);
+      const creaseWidth = this.radius * 0.02;
+
+      for (let i = 0; i < creaseCount; i++) {
+        const angle = (i / creaseCount) * Math.PI * 2 + (Math.random() * 0.2 - 0.1);
+        const endX = centerX + Math.cos(angle) * this.radius;
+        const endY = centerY + Math.sin(angle) * this.radius;
+
+        // Draw main crease
+        ctx.strokeStyle = 'rgba(0, 0, 0, 0.2)';
+        ctx.lineWidth = creaseWidth * 2;
+        ctx.beginPath();
+        ctx.moveTo(centerX, centerY);
+        ctx.lineTo(endX, endY);
+        ctx.stroke();
+
+        // Add 1-2 branches near the edge
+        const branchCount = 1 + Math.floor(Math.random() * 2);
+        for (let j = 0; j < branchCount; j++) {
+          const branchAngle = angle + (Math.random() * 0.5 - 0.25);
+          const branchLength = this.radius * (0.2 + Math.random() * 0.3);
+          const branchX = centerX + Math.cos(branchAngle) * branchLength;
+          const branchY = centerY + Math.sin(branchAngle) * branchLength;
+
+          ctx.lineWidth = creaseWidth;
+          ctx.beginPath();
+          ctx.moveTo(endX, endY);
+          ctx.lineTo(branchX, branchY);
+          ctx.stroke();
+        }
+      }
+    }
+
+    drawFlower(ctx, centerX, centerY) {
+      // Draw flower center
+      const flowerSize = this.radius * 0.2;
+      ctx.fillStyle = this.flowerColor;
+      ctx.beginPath();
+      ctx.arc(centerX, centerY, flowerSize * 0.3, 0, Math.PI * 2);
+      ctx.fill();
+
+      // Draw petals
+      const petalCount = 5 + Math.floor(Math.random() * 3);
+      for (let i = 0; i < petalCount; i++) {
+        const angle = (i / petalCount) * Math.PI;
+        const petalLength = flowerSize * (0.7 + Math.random() * 0.3);
+        const petalWidth = flowerSize * 0.2;
+
+        ctx.fillStyle = this.flowerColor;
+        ctx.beginPath();
+        ctx.ellipse(
+          centerX + Math.cos(angle) * petalLength * 0.5,
+          centerY + Math.sin(angle) * petalLength * 0.5,
+          petalWidth,
+          petalLength * 0.5,
+          angle,
+          0,
+          Math.PI * 2
+        );
+        ctx.fill();
+      }
+
+      // Add some highlights
+      ctx.fillStyle = 'rgba(255, 255, 255, 0.3)';
+      ctx.beginPath();
+      ctx.arc(centerX - flowerSize * 0.1, centerY - flowerSize * 0.1, flowerSize * 0.1, 0, Math.PI * 2);
+      ctx.fill();
+    }
+
     remove() {
-      if(this.el.parentNode) this.el.parentNode.removeChild(this.el);
+      if (this.canvas.parentNode) {
+        this.canvas.parentNode.removeChild(this.canvas);
+      }
       lilyPads = lilyPads.filter(l => l !== this);
     }
 
@@ -1228,7 +1219,7 @@
         if (!this.turtlesOnPad.includes(turtle)) {
           this.turtlesOnPad.push(turtle);
           turtle.originalIdleTime = turtle.idleTimer;
-          turtle.idleTimer *= 3; // Triple idle time when on lily pad
+          turtle.idleTimer *= 3;
         }
         return true;
       } else {
@@ -1762,7 +1753,6 @@
             lilyPads = [];
             l.forEach(data => {
                 const np = new Lilypad(data.x, data.y, data.size);
-                lilyPads.push(np);
             });
         }
     } catch(e) {
@@ -2030,15 +2020,19 @@
   });
 
   ui.addLilypad.addEventListener('click', () => {
-    placingLilypad = true;
-    removingLilypad = false;
-    showNotification("Click to place lily pad");
+    setTimeout(()=>{
+      placingLilypad = true;
+      removingLilypad = false;
+      showNotification("Click to place lily pad");
+    },200)
   });
 
   ui.removeLilypad.addEventListener('click', () => {
-    removingLilypad = true;
-    placingLilypad = false;
-    showNotification("Click on a lily pad to remove it");
+    setTimeout(()=>{
+      removingLilypad = true;
+      placingLilypad = false;
+      showNotification("Click on a lily pad to remove it");
+    },200)
   });
 
   ui.nuke.addEventListener('click', () => {
